app/components/Header/Header.scss
@import '../../scss/variables';

.header-wrapper {
	height: $headerHeight;
	position: relative;
	z-index: 2;

	@media(min-width: $breakPointLarge) {
		height: $headerHeightLargeBreakPoint;
	}
}

.header {
	background-color: $brandingColor;
	color: $secondaryColor;
	box-sizing: border-box;
	height: $headerHeight;
	overflow: hidden;
	padding: 115px 16px 72px;
	transition: height 1s ease, top 1s ease;
	width: 100%;
	z-index: 2;

	@media(min-width: $breakPointMedium) {
		padding-top: 135px;
	}

	@media(min-width: $breakPointLarge) {
		height: $headerHeightLargeBreakPoint;
		padding-top: 165px;
	}
}

.header--fixed {
	position: fixed;
	top: - ($headerHeight - $fixedHeaderHeight);

	@media(min-width: $breakPointLarge) {
		top: - ($headerHeightLargeBreakPoint - $fixedHeaderHeight);
	}
}

.header--expanded {
	top: 0;
	overflow: auto;
	padding-top: 0;

	.top-bar {
		height: 52px;
		padding-top: 15px;
		position: relative;
	}
}

.top-bar {
	box-sizing: border-box;
	height: 0;
	position: absolute;
	top: 0;
}

.header__home-link {
	cursor: pointer;
	font-family: 'Caviar Dreams', sans-serif;
	font-size: 20px;
	letter-spacing: 2px;
	left: 0;
	line-height: 24px;
	display: none;
	position: fixed;
	text-align: center;
	top: 15px;
	width: 100%;
	z-index: 4;

	@media (max-width: 350px) {
		padding-left: 18px;
	}

	a {
		cursor: pointer;
	}

	.header--fixed &,
	.header--expanded & {
		display: block;
	}

	.header--fixed.header--expanded & {
		position: static;
	}


	@media (min-width: $breakPointLarge) {
		left: 30px;
		width: auto;
	}
}

.header__hero {
	text-align: center;

	.header--fixed &,
	.header--expanded & {
		display: none;
	}
}

.header__hero__title,
.header__hero__sub-title {
	font-family: 'Caviar Dreams', sans-serif;
}

.header__hero__title {
	font-size: 40px;
	font-weight: bold;
	letter-spacing: 7px;
	line-height: 60px;
	margin: 0 0 42px;

	@media (min-width: $breakPointMedium) {
		font-size: 48px;
		letter-spacing: 9px;
	}

	@media (min-width: $breakPointLarge) {
		font-size: 64px;
		letter-spacing: 12px;
		line-height: 81px;
	}
}

.header__hero__sub-title {
	font-size: 18px;
	font-weight: normal;
	letter-spacing: 7px;
	line-height: 30px;
	margin: 0 0 72px;

	@media (min-width: $breakPointMedium) {
		letter-spacing: 15px;
	}

	@media (min-width: $breakPointLarge) {
		font-size: 24px;
		letter-spacing: 20px;
		line-height: 27px;
		margin: 0 0 96px;
	}
}

.see-more-icon {
	display: block;
	fill: $secondaryColor;
	height: 24px;
	margin: 60px auto 0;
	width: 24px;
}

